[gd_scene load_steps=9 format=3 uid="uid://4778tvltpbg1"]

[ext_resource type="Texture2D" uid="uid://bfa5bbpxq1kre" path="res://Assets/Art/Blob_Sprites.png" id="1_60wk3"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ouj1n"]

[sub_resource type="Animation" id="Animation_eo2ni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_t4bkv"]
resource_name = "death"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_g4ynl"]
resource_name = "idle"
length = 1.00002
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_10iau"]
resource_name = "run"
length = 1.00002
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svout"]
_data = {
"RESET": SubResource("Animation_eo2ni"),
"death": SubResource("Animation_t4bkv"),
"idle": SubResource("Animation_g4ynl"),
"run": SubResource("Animation_10iau")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sct1y"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ouj1n")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_60wk3")
hframes = 8
vframes = 10
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_svout")
}
autoplay = "idle"

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sct1y")

[node name="Blink_All" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="In_Out_Blink" type="Timer" parent="."]
wait_time = 0.05

[node name="death" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Blink_All" to="." method="_on_blink_all_timeout"]
[connection signal="timeout" from="In_Out_Blink" to="." method="_on_in_out_blink_timeout"]
[connection signal="timeout" from="death" to="." method="_on_death_timeout"]
